接口规范调整，wecom config接口调整
