# backend/router/ro_policy.go
@@ -11,12 +11,11 @@ type PolicyRouter struct {
 }
 
 func (s *PolicyRouter) InitRouter(Router *gin.RouterGroup) {
-	// policyRouter := Router.Group("policy")
 	policyRouter := Router.Group("policy").Use(middleware.AuthRequired())
 	baseApi := v1.ApiGroupApp.BaseApi
 	{
-		policyRouter.GET("/", baseApi.PolicyList)
-		policyRouter.POST("/", baseApi.PolicyAdd)
+		policyRouter.GET("", baseApi.PolicyList)
+		policyRouter.POST("", baseApi.PolicyAdd)
 		policyRouter.GET("/:uuid", baseApi.PolicyGet)
 		policyRouter.PATCH("/:uuid", baseApi.PolicyUpdate)
 		policyRouter.DELETE("/:uuid", baseApi.PolicyDel)
